src/App.css
.App {
  text-align: center;
}

.body {
  width: 100%
}

#AspenLogo {
  margin: 10px;
  max-width: 155px;
}

#NavItems {
  position: relative;
  display: flex;
  margin-left: auto;
}

.NavButtons {
  margin-right: 100px;
}

#DataGridDiv {
  max-width: 1920px;
  margin: auto;
}

#NodePage {
  margin: auto;
  max-width: 1920px;
  height: auto;
  background-color: #F5F5F5;
}

#NodePageContent {
  height: auto;
}

#clock {
  display: flex;
  margin-left: auto;
}

span {
  display: flex;
  margin: auto;
  margin-top: 2vh;
  margin-bottom: 20px;
  font-size: 30px;
}

#AIMEInfoDiv {
  width: 500px;
  margin-left: 10%;
  display: inline-block;
}

#SystemInfoDiv {
  width: 500px;
  margin-right: 10%;
  float: right;
  white-space: nowrap;
}

#QAButton {
  display: inline;
  margin-top: 20px;
  margin-right: 10%;
}

#JobNumButton {
  display: inline;
  float: right;
  margin-top: 20px;
}

#AIMETestsTable {
  margin: auto;
  margin-top: 5%;
  width: 1200px
}

#accordionTables {
  height: 1000px;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (max-width: 830px) {
  img {
      display: none; /* Hide the image below 600px */
  }

  #AppBarLinks {
    font-size: 2.3vw;
    margin: auto;
    display: inline-block;
  }

  #NavItems {
    display: flex;
    margin-left: 0%
  }
}

